--- a/public/locales/de/translations.json
+++ b/public/locales/de/translations.json
@@ -1,60 +1,60 @@
 {
     "dashbar": {
-        "home": "Home",
-        "myquizzes": "My Quizzes",
-        "community": "Community",
-        "leaderboard": "Leaderboard",
-        "bookmarks": "Bookmarks",
-        "support": "Support",
-        "settings": "Settings",
-        "theme": "Theme",
-        "language": "Language",
-        "lightmode": "Light Mode",
-        "darkmode": "Dark Mode",
-        "ar": "Arabic",
-        "en": "English",
-        "sq": "Albanian",
-        "fr": "French",
-        "de": "German",
-        "coins": "Coins",
-        "profile": "Profile",
-        "logout": "Logout"
+        "home": "Hause",
+        "myquizzes": "Meine Quiz",
+        "community": "Gemeinschaft",
+        "leaderboard": "Bestenliste",
+        "bookmarks": "Lesezeichen",
+        "support": "Unterstützung",
+        "settings": "Einstellungen",
+        "theme": "Thema",
+        "language": "Sprache",
+        "lightmode": "Lichtmodus",
+        "darkmode": "Dunkelmodus",
+        "ar": "Arabisch",
+        "en": "Englisch",
+        "sq": "Albanisch",
+        "fr": "Französisch",
+        "de": "Deutsch",
+        "coins": "Münzen",
+        "profile": "Profil",
+        "logout": "Abmelden"
     },
     "quizzes": {
-        "title": "Quizzes",
-        "search": "Search your quizzes...",
-        "addquiz": "Add new Quiz",
-        "emptyone": "You don't have any Quizzes",
-        "emptytwo": "Why you don't add one now?",
-        "share": "Share",
-        "edit": "Edit",
-        "delete": "Delete"
+        "title": "Quizfragen",
+        "search": "Suche in deinen Quizfragen...",
+        "addquiz": "Neues Quiz hinzufügen",
+        "emptyone": "Du hast keine Quizfragen",
+        "emptytwo": "Warum fügst du jetzt keinen hinzu?",
+        "share": "Teilen",
+        "edit": "Bearbeiten",
+        "delete": "Löschen"
     },
     "community": {
         "title": "Community",
-        "search": "Search community...",
-        "play": "Play Quiz",
-        "categories": "All Categories",
-        "religion": "Relegion",
-        "programming": "Programming",
-        "mathematics": "Mathematics",
+        "search": "Community durchsuchen...",
+        "play": "Spiel Quiz",
+        "categories": "Alle Kategorien",
+        "religion": "Religion",
+        "programming": "Programmierung",
+        "mathematics": "Mathematik",
         "sport": "Sport",
-        "art": "Art",
-        "others": "Others",
-        "physics": "Physics"
+        "art": "Kunst",
+        "others": "Andere",
+        "physics": "Physik"
     },
     "quiz": {
-        "question": "Start typing your question...",
-        "answer": "Your answer here",
-        "questions": "Questions",
-        "addquestion": "Add Question",
+        "question": "Geben Sie hier Ihre Frage ein...",
+        "answer": "Ihre Antwort hier",
+        "questions": "Fragen",
+        "addquestion": "Frage hinzufügen",
         "publish": "Publish",
         "title": "Title",
         "settings": "Settings",
         "quizbuilder": "Quiz Builder",
-        "quizpublish": "Quiz Publish",
-        "quizedit": "Quiz Edit",
-        "description": "Description",
+        "quizpublish": "Veröffentlichen",
+        "quizedit": "Titel",
+        "description": "Einstellungen",
         "category": "Category",
         "thumbnail": "Thumbnail",
         "religion": "Relegion",
