--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -22,7 +22,7 @@
     },
     "quizzes": {
         "title": "Quizfragen",
-        "search": "Suche in deinen Quizfragen...",
+        "search": "Suche...",
         "addquiz": "Neues Quiz hinzufügen",
         "emptyone": "Du hast keine Quizfragen",
         "emptytwo": "Warum fügst du jetzt keinen hinzu?",
@@ -32,7 +32,7 @@
     },
     "community": {
         "title": "Community",
-        "search": "Community durchsuchen...",
+        "search": "Suche...",
         "play": "Spiel Quiz",
         "categories": "Alle Kategorien",
         "religion": "Religion",
@@ -48,21 +48,21 @@
         "answer": "Ihre Antwort hier",
         "questions": "Fragen",
         "addquestion": "Frage hinzufügen",
-        "publish": "Publish",
-        "title": "Title",
-        "settings": "Settings",
+        "publish": "Veröffentlichen",
+        "title": "Titel",
+        "settings": "Einstellungen",
         "quizbuilder": "Quiz Builder",
-        "quizpublish": "Veröffentlichen",
-        "quizedit": "Titel",
-        "description": "Einstellungen",
-        "category": "Category",
-        "thumbnail": "Thumbnail",
-        "religion": "Relegion",
-        "programming": "Programming",
-        "mathematics": "Mathematics",
+        "quizpublish": "Quiz veröffentlichen",
+        "quizedit": "Quiz bearbeiten",
+        "description": "Beschreibung",
+        "category": "Kategorie",
+        "thumbnail": "Miniaturansicht",
+        "religion": "Religion",
+        "programming": "Programmierung",
+        "mathematics": "Mathematik",
         "sport": "Sport",
-        "art": "Art",
-        "others": "Others",
-        "physics": "Physics"
+        "art": "Kunst",
+        "others": "Andere",
+        "physics": "Physik"
     }
 }
