--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -1,68 +1,71 @@
 {
     "dashbar": {
-        "home": "Home",
-        "myquizzes": "My Quizzes",
-        "community": "Community",
-        "leaderboard": "Leaderboard",
-        "bookmarks": "Bookmarks",
-        "support": "Support",
-        "settings": "Settings",
-        "theme": "Theme",
-        "language": "Language",
-        "lightmode": "Light Mode",
-        "darkmode": "Dark Mode",
-        "ar": "Arabic",
-        "en": "English",
-        "sq": "Albanian",
-        "fr": "French",
-        "de": "German",
-        "coins": "Coins",
-        "profile": "Profile",
-        "logout": "Logout"
+        "home": "Maison",
+        "myquizzes": "Mes quiz",
+        "community": "Communauté",
+        "leaderboard": "Classement",
+        "bookmarks": "Signets",
+        "support": "Soutien",
+        "settings": "Paramètres",
+        "theme": "Thème",
+        "language": "Langue",
+        "lightmode": "Mode lumière",
+        "darkmode": "Mode sombre",
+        "ar": "Arabe",
+        "en": "Anglais",
+        "sq": "Albanais",
+        "fr": "Français",
+        "de": "Allemand",
+        "coins": "Pièces",
+        "profile": "Profil",
+        "logout": "Se déconnecter"
     },
     "quizzes": {
-        "title": "Quizzes",
-        "search": "Search your quizzes...",
-        "addquiz": "Add new Quiz",
-        "emptyone": "You don't have any Quizzes",
-        "emptytwo": "Why you don't add one now?",
-        "share": "Share",
-        "edit": "Edit",
-        "delete": "Delete"
+        "title": "Quizz",
+        "search": "Recherchez...",
+        "addquiz": "Ajouter un nouveau quiz",
+        "emptyone": "Vous n'avez pas de Quiz",
+        "emptytwo": "Pourquoi n'en ajoutez-vous pas maintenant?",
+        "share": "Partage",
+        "edit": "Modifier",
+        "delete": "Supprimer"
     },
     "community": {
-        "title": "Community",
-        "search": "Search community...",
-        "play": "Play Quiz",
-        "categories": "All Categories",
-        "religion": "Relegion",
-        "programming": "Programming",
-        "mathematics": "Mathematics",
+        "title": "Communauté",
+        "search": "Recherchez...",
+        "play": "Jouer au quiz",
+        "categories": "Catégories",
+        "religion": "Religion",
+        "programming": "Programmation",
+        "mathematics": "Mathématiques",
         "sport": "Sport",
         "art": "Art",
-        "others": "Others",
-        "physics": "Physics"
+        "others": "Autres",
+        "physics": "Physique"
     },
     "quiz": {
-        "question": "Start typing your question...",
-        "answer": "Your answer here",
+        "question": "Commencez à taper votre question...",
+        "answer": "Votre réponse ici",
         "questions": "Questions",
-        "addquestion": "Add Question",
-        "publish": "Publish",
-        "title": "Title",
-        "settings": "Settings",
-        "quizbuilder": "Quiz Builder",
-        "quizpublish": "Quiz Publish",
-        "quizedit": "Quiz Edit",
-        "description": "Description",
-        "category": "Category",
-        "thumbnail": "Thumbnail",
-        "religion": "Relegion",
-        "programming": "Programming",
-        "mathematics": "Mathematics",
+        "addquestion": "Ajouter une question",
+        "publish": "Publier",
+        "title": "Titre",
+        "settings": "Paramètres",
+        "quizbuilder": "Générateur de quiz",
+        "quizpublish": "Quiz Publier",
+        "quizedit": "Quiz Modifier",
+        "description": "La description",
+        "category": "Catégorie",
+        "thumbnail": "La vignette",
+        "religion": "Religion",
+        "programming": "Programmation",
+        "mathematics": "Mathématiques",
         "sport": "Sport",
         "art": "Art",
-        "others": "Others",
-        "physics": "Physics"
+        "others": "Autres",
+        "physics": "Physique"
+    },
+    "play_screen": {
+        "title": "Playing a quiz is simple easly, play by entering a code or through a link that someone invited you to do so."
     }
 }
