--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -64,5 +64,22 @@
         "art": "الفن",
         "others": "آخرون",
         "physics": "الفيزياء"
+    },
+    "play_screen": {
+        "title": "كن أينشتاين ، العب الآن",
+        "description": "تشغيل اختبار بسيط بسهولة ، يمكنك اللعب بإدخال رمز أو من خلال رابط دعاك شخص ما للقيام بذلك.",
+        "enter": "أدخل"
+    },
+    "play_enter": {
+        "timeleft": "وقت الرد",
+        "coinscollected": "تم تجميع العملات",
+        "correcta": "الإجابات الصحيحة",
+        "wronga": "إجابات خاطئة",
+        "leftquestions": "أسئلة اليسار",
+        "totalquestions": "مجموع الأسئلة",
+        "settings": "إعدادات",
+        "analytics": "تحليلات",
+        "anwsers": "الإجابات",
+        "play_again": "Pالعب مرة أخرى مع"
     }
 }
