--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -81,5 +81,57 @@
         "analytics": "Analytics",
         "anwsers": "Answers",
         "play_again": "Play again with"
+    },
+    "auth": {
+        "logindesc": "If do you have an account, then come back let's learn together by playing quizes and bee a like Einstein.",
+        "logintitle": "Do you have an Account?",
+        "loginbtn": "Sign In",
+        "joinnow": "Join Now",
+        "o": "Or use your email for registration",
+        "name": "Name",
+        "email": "Email",
+        "password": "Password",
+        "confirmpassword": "Confrim Password",
+        "username": "Username",
+        "signupbtn": "Regjistrohu"
+    },
+    "header": {
+        "mission": "Mission",
+        "pricing": "Pricing",
+        "support": "Support",
+        "team": "Team",
+        "about": "About",
+        "logincta": "Login",
+        "registercta": "Get Started",
+        "logout": "Logout",
+        "profile": "Profile"
+    },
+    "home": {
+        "section_1": {
+            "title": "Making Learning Fun with Quizzes",
+            "description": "With our platform learning is awesome and fun with community made quizes of different fields.",
+            "cta": "Play a Random Quiz"
+        },
+        "section_2": {
+            "title": "Our Features",
+            "description": "Different features for knoweldge seekers, nonetheless always makeing it fun for you.            ",
+            "feature_one": {
+                "title": "Build Quizzes",
+                "description": "Build quizess of different kinds with our platoform with all the tools you need."
+            },
+            "feature_two": {
+                "title": "Share Quizzes",
+                "description": "Quizess that can be played by others are the fun of our platform, share them now."
+            },
+            "feature_three": {
+                "title": "Browse Community",
+                "description": "Our community of quizess with different categories for you to search and learn."
+            }
+        },
+        "section_3": {
+            "title": "What is the Mission of our platform?",
+            "description": "We are very passionate about helping the community learn, so for this reason we've build Swift Quiz to help people get knoweldge easy in a fun way for their topic they watch and love, this platform is all build by community.",
+            "cta": "Explore Quizzes"
+        }
     }
 }
