--- a/public/locales/sq/translation.json
+++ b/public/locales/sq/translation.json
@@ -81,5 +81,36 @@
         "analytics": "Analtika",
         "anwsers": "Përgjigjet",
         "play_again": "Luaj përsëri me"
+    },
+    "auth": {
+        "logindesc": "Nese keni ndonjë llogari atëhere ju mund te kyceni në platform pa problem.",
+        "logintitle": "Keni llogari?",
+        "loginbtn": "Kycu",
+        "joinnow": "Regjistrou Tani",
+        "oremail": "Ose përdor adres elektronike për regjistrim?",
+        "name": "Emri i plotë",
+        "email": "Adresa Elektronike",
+        "password": "Fjalëkalimi",
+        "confirmpassword": "Konfirmo Fjalëkalimin",
+        "username": "Niknejmi",
+        "signupbtn": "Regjistrou"
+    },
+    "header": {
+        "mission": "Misioni",
+        "pricing": "Cmimorja",
+        "contact": "Na Kontaktoni",
+        "team": "Ekipi",
+        "about": "Rreth Nesh",
+        "logincta": "Kycu",
+        "registercta": "Regjsitrohu",
+        "logout": "Dil nga llogaria",
+        "profile": "Llogaria ime"
+    },
+    "home": {
+        "section_1": {
+            "title": "",
+            "description": "",
+            "cta": ""
+        }
     }
 }
