--- a/public/locales/sq/translation.json
+++ b/public/locales/sq/translation.json
@@ -93,7 +93,7 @@
         "password": "Fjalëkalimi",
         "confirmpassword": "Konfirmo Fjalëkalimin",
         "username": "Niknejmi",
-        "signupbtn": "Regjistrou"
+        "signupbtn": "Regjistrohu"
     },
     "header": {
         "mission": "Misioni",
@@ -108,9 +108,34 @@
     },
     "home": {
         "section_1": {
-            "title": "",
-            "description": "",
-            "cta": ""
+            "title": "Mësim të lehtë me Kuize",
+            "description": "Me platformën tonë ju mundë të mësoni duke u argëtuar dhe kërkuar kuize në komunitet për lëmin tuaj.",
+            "cta": "Luaj një Kuiz të randomtë"
+        },
+        "section_2": {
+            "title": "Shërbimet e Tona",
+            "description": "Karakteristika të ndryshme për kërkuesit e njohurive, megjithatë gjithmonë duke e bërë atë argëtuese për ju.",
+            "feature_one": {
+                "title": "Ndërto Kuize",
+                "description": "Ndërtoni kuize të llojeve të ndryshme me platformën tonë me të gjitha mjetet që ju nevojiten."
+            },
+            "feature_two": {
+                "title": "Shpërnda Kuize",
+                "description": "Kuizet që mund të luhen nga të tjerët janë kënaqësia e platformës sonë, ndajini ato tani."
+            },
+            "feature_three": {
+                "title": "Kërko në Komunitet",
+                "description": "Komuniteti ynë i kuizes me kategori të ndryshme për të kërkuar dhe mësuar"
+            }
+        },
+        "section_3": {
+            "title": "Cili është misioni i platformës sonë?",
+            "description": "Ne jemi shumë të pasionuar për të ndihmuar komunitetin të mësojë, kështu që për këtë arsye ne kemi ndërtuar Swift Quiz për t'i ndihmuar njerëzit të njohin lehtësisht në një mënyrë argëtuese për temën e tyre që shikojnë dhe duan, kjo platformë është e ndërtuar e gjitha nga komuniteti.",
+            "cta": "Eksploro Kuize"
         }
+    },
+    "error": {
+        "description": "Faqja nuk u gjend nëse mendoni kjo ështa gabim atëherë kontaktoni ekipin tonë.",
+        "cta": "Ktheu tek Ballina"
     }
 }
