User Coins  & Score Incrementation

--- a/public/locales/sq/translation.json
+++ b/public/locales/sq/translation.json
@@ -32,6 +32,7 @@
         "delete": "Fshije"
     },
     "community": {
+        "price":"Qmimi",
         "title": "Komuniteti",
         "search": "Kërko kuize...",
         "play": "Paguaj per te luajtur",
