--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -32,6 +32,7 @@
         "delete": "Delete"
     },
     "community": {
+        "price":"Price",
         "confirm":"Are you sure you want to purchase this quiz ?",
         "confirmation":"Yes",
         "deny":"No",
