--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -32,13 +32,14 @@
         "delete": "Delete"
     },
     "community": {
-        "confirm":"Are you sure you want to purchase this quiz ?",
-        "confirmation":"Yes",
-        "deny":"No",
+        "confirm": "Are you sure you want to purchase this quiz ?",
+        "confirmation": "Yes",
+        "deny": "No",
         "purchase":"Purchase confirmation",
         "title": "Community",
         "search": "Search community...",
-        "play": "Purchase to play",
+        "play": "Play for",
+        "coins": "Coins",
         "categories": "All Categories",
         "religion": "Relegion",
         "programming": "Programming",
