Profile Page + Public Profile  + Other minor changes

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
     "dashbar": {
-        "home": "Home",
+        "home": "Quizzes",
         "myquizzes": "My Quizzes",
         "community": "Community",
         "leaderboard": "Leaderboard",
