New Big Update: Modal Fix, Homepage and many other fixes

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -45,7 +45,7 @@
     "purchase": "Purchase confirmation",
     "title": "Community",
     "search": "Search community...",
-    "play": "Play for",
+    "play": "Play",
     "coins": "Coins",
     "categories": "All Categories",
     "religion": "Relegion",
