--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -45,7 +45,7 @@
     "search": "Search your quiz"
   },
   "community": {
-    "price": "Price",
+    "price": "Price : ",
     "confirm": "Are you sure you want to purchase this quiz ?",
     "confirmation": "Yes",
     "deny": "No",
