Quiz Purchase Modal + Responsivity

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -42,7 +42,10 @@
     "emptyone": "You have no quizzes",
     "emptytwo": "Go ahead create a new quiz",
     "title": "Quizzes",
-    "search": "Search your quiz"
+    "search": "Search your quiz",
+    "share": "Share your quiz",
+    "edit": "Edit",
+    "delete": "Delete quiz"
   },
   "community": {
     "price": "Price : ",
@@ -86,6 +89,8 @@
     "physics": "Physics"
   },
   "play_screen": {
+    "modalTitle": "Purchasing",
+    "modalText": "Are your sure you want to purchase this quiz ?",
     "title": "Test your knowledge, play now!",
     "description": "If you came here by invitation code, write it down below!",
     "enter": "Enter",
